syntax = "proto3";

message PlayerMovementAction {
  uint32 id = 1;
  float x = 2;
  float y = 3;
}